# university-projects

./: README.md
Focus Project/: README.md
Focus Project/User-based procedurally generated terrain using noise Final_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
Focus Project/User_based_procedurally_generated_terrain_using_noise/: Assembly-CSharp.csproj  User-Based procedurally generated terrain with perlin noise.sln
Focus Project/User_based_procedurally_generated_terrain_using_noise/Assets/: New Terrain.asset  TreeModelByRobert.prefab  fannys_stuff.fbx
Focus Project/User_based_procedurally_generated_terrain_using_noise/ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
Focus Project/User_based_procedurally_generated_terrain_using_noise/Temp/: UnityTempFile-0a723f8151119eb49bea79b5b3e3db02  UnityTempFile-10ed9b53232a4af47ad960be78f27833
Game Project/: README.md
Game Project/Timeline/script/: InteractableObjects.lua  Inventory.lua  credits_menu.lua  extraInteractebles.lua  key_bindings_menu.lua  loadNote_menu.lua  load_save.lua  main_menu.lua  options_menu.lua  pause_menu.lua  project.lua  startWarning_menu.lua  win_menu.lua
Game_Consoles_And_Systems/Half_edge_mesh/: CMakeLists.txt  README.md
Game_Consoles_And_Systems/Half_edge_mesh/projects/half-edge/: CMakeLists.txt  backup.lua  output.ppm
Game_Consoles_And_Systems/Half_edge_mesh/projects/half-edge/code/: GraphicsNode.cc  GraphicsNode.h  Half_Edge_Mesh.cpp  Half_Edge_Mesh.h  LightNode.cc  LightNode.h  MeshResources.cc  ShaderObject .cc  ShaderObject.h  TextureResource.cc  exampleapp.cc  exampleapp.h
Game_Consoles_And_Systems/Half_edge_mesh/projects/half-edge/resources/: vertex_shader.txt
Game_Consoles_And_Systems/Pac-Man_Arduino/: map  myassets.h  pacman.ino
Game_Consoles_And_Systems/Rasterizer/lab-env-master/projects/exampleCopy/: CMakeLists.txt  vertex_shader.txt
Game_Consoles_And_Systems/Rasterizer/lab-env-master/projects/exampleCopy/code/: GraphicsNode.cc  GraphicsNode.h  LightNode.cc  MeshResources.cc  MeshResources.h  Rasterizer.cc  Rasterizer.h  ShaderObject .cc  TextureResource.cc  TextureResource.h  exampleapp.cc  exampleapp.h
Game_Consoles_And_Systems/Rasterizer/lab-env-master/projects/exampleCopy/resources/: fragment_shader.txt
Graphics_Programming_And_Algorithms/lab-env-master/: README.md
Graphics_Programming_And_Algorithms/lab-env-master/projects/GrafikAlgoritmer/: CMakeLists.txt
Graphics_Programming_And_Algorithms/lab-env-master/projects/GrafikAlgoritmer/code/: Animation.cpp  Animation.h  ShaderObject.cpp  ShaderObject.h  Skeleton.cpp  Skeleton.h  Skinning.cpp  Skinning.h  VertexComponents.h  exampleapp.cc  exampleapp.h  main.cc
Graphics_Programming_And_Algorithms/lab-env-master/projects/MathLib/: CMakeLists.txt
Graphics_Programming_And_Algorithms/lab-env-master/projects/MathLib/code/: Matrix3D.h
(+24 files in other folders)
